--- a/genomekit_dev.yml
+++ b/genomekit_dev.yml
@@ -5,7 +5,7 @@ channels:
 dependencies:
   - appdirs>=1.4.0
   - numpy
-  - python=3.9.0,<3.14.0
+  - python>=3.9.0,<3.14.0
   - tqdm
   - typing-extensions
   - zlib
