--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -27,7 +27,8 @@ requirements:
 
   host:
     - appdirs
-    - numpy
+    - numpy ==2                              # [py>=313]
+    - numpy                                  # [py<313]
     - typing-extensions
     - zlib
     - python {{ python }}
