--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -21,14 +21,12 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     # if not specified, default numpy version is 1.26
     # but py313 not supported for that version of numpy
-    - numpy ==2                              # [py>=313 and build_platform != target_platform]
-    - numpy                                  # [py<313 and build_platform != target_platform]
+    - numpy ==2
     - setuptools                             # [build_platform != target_platform]
 
   host:
     - appdirs
-    - numpy ==2                              # [py>=313]
-    - numpy                                  # [py<313]
+    - numpy ==2
     - typing-extensions
     - zlib
     - python {{ python }}
