--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
-  skip: true  # [py>312 or py<39]
+  skip: true  # [py>313 or py<39]
 
 requirements:
   build:
@@ -21,12 +21,14 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     # if not specified, default numpy version is 1.26
     # but py313 not supported for that version of numpy
-    - numpy ==2
+    - numpy ==2                              # [py>=313 and build_platform != target_platform]
+    - numpy                                  # [py<313 and build_platform != target_platform]
     - setuptools                             # [build_platform != target_platform]
 
   host:
     - appdirs
-    - numpy ==2
+    - numpy ==2 # [py>=313]
+    - numpy     # [py<313]
     - typing-extensions
     - zlib
     - python {{ python }}
@@ -35,7 +37,8 @@ requirements:
 
   run:
     - appdirs
-    - google-cloud-storage
+    # google-cloud-storage breaks the build on py313
+    - google-cloud-storage # [py<313]
     - boto3
     - typing-extensions
     - importlib-metadata
