--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -24,9 +24,9 @@ requirements:
 
   host:
     - appdirs
-    # I don't know why, but if not specified, conda selects numpy v1.26, incompatible with py313
-    - numpy ==2 # [py>=313]
-    - numpy     # [py<313]
+    # don't know why, but if not specified, conda selects numpy v1.26, incompatible with py313
+    - {{ numpy }} # [py>=313]
+    - numpy # [py<313]
     - typing-extensions
     - zlib
     - python {{ python }}
