--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -25,8 +25,8 @@ requirements:
   host:
     - appdirs
     # don't know why, but if not specified, conda selects numpy v1.26, incompatible with py313
-    - numpy {{ numpy }} # [py>=313]
-    - numpy # [py<313]
+    - numpy ==2 # [py>=313]
+    - numpy     # [py<313]
     - typing-extensions
     - zlib
     - python {{ python }}
