--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -77,11 +77,9 @@ jobs:
         shell: bash -l -e {0}
         run: |
           set -x
-          # inconsistently got "coverage 7.9.1 is not supported on this platform" so removed
-          # (not needed?)
           if [ ! -d "${HOME}/micromamba/envs/test" ]; then
             micromamba create -yqn test -c conda-forge \
-              boa==0.16.0 mamba==1.5.7 conda==24.1.2
+              boa==0.16.0 mamba==1.5.7 conda==24.1.2 coverage
           fi
           set +x
 
