--- a/.github/actions/build-gk/action.yaml
+++ b/.github/actions/build-gk/action.yaml
@@ -40,7 +40,7 @@ runs:
       run: |
         set -x
         if [ ! -d "${HOME}/micromamba/envs/build" ]; then
-          micromamba create -yqn build -c conda-forge boa==0.17.0 mamba==1.5.8 conda=24.5 ccache
+          micromamba create -yqn build -c conda-forge mamba==1.5.8 conda=24.5 ccache
         fi
         set +x
 
