--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -76,11 +76,12 @@ jobs:
       - name: create test env
         shell: bash -l -e {0}
         run: |
+          # boa required for the mambabuild subcommand
           set -x
           # inconsistently got "coverage 7.9.1 is not supported on this platform" so removed
           # (not needed?)
           if [ ! -d "${HOME}/micromamba/envs/test" ]; then
-            micromamba create -yqn test -c conda-forge mamba==1.5.7 conda==24.1.2
+            micromamba create -yqn test -c conda-forge boa==0.16.0 mamba==1.5.7 conda==24.1.2
           fi
           set +x
 
