--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -5,12 +5,14 @@ on:
   push:
     # only build+push docker on release-please tags
     tags: [ "v*" ]
+    branches:
+      - feat/py313
     paths:
     - ".github/actions/**"
     - ".github/workflows/**"
     - "genome_kit/**"
     - "setup.py"
-    - "_pyproject.toml"
+    - "pyproject.toml"
     - "setup/**"
     - "src/**"
     - "tests/**"
@@ -33,14 +35,10 @@ jobs:
         id: restore_linux_wheels
         uses: actions/cache/restore@v4
         with:
-          key: linux-wheels-${{ matrix.arch }}-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
+          key: linux-wheels-${{ matrix.arch }}-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
           path: wheelhouse/*.whl
 
       # skip remaining steps on cache hit
-
-      - if: ${{ steps.restore_linux_wheels.outputs.cache-hit != 'true' }}
-        name: Rename pyproject.toml
-        run: mv _pyproject.toml pyproject.toml
 
       - if: ${{ steps.restore_linux_wheels.outputs.cache-hit != 'true' }}
         name: Set up Python
@@ -172,7 +170,7 @@ jobs:
       - name: Download built wheels
         uses: actions/cache/restore@v4
         with:
-          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
+          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
           path: wheelhouse/*.whl
           fail-on-cache-miss: true
 
@@ -214,7 +212,7 @@ jobs:
 #        id: restore_linux_intel_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -222,7 +220,7 @@ jobs:
 #        id: restore_linux_arm_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -230,7 +228,7 @@ jobs:
 #        id: restore_macos_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -248,48 +246,48 @@ jobs:
 #          verbose: 'true'
 #          skip-existing: 'true'
 
-  publish-to-pypi:
-    name: Publish to PyPI
-    needs: [build-wheel-linux, test-wheel-macos]
-    runs-on: ubuntu-latest
-
-    environment:
-      name: pypi
-      url: https://pypi.org/p/genomekit
-
-    permissions:
-      id-token: write  # mandatory for trusted publishing
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Restore the linux intel wheels cache
-        id: restore_linux_intel_wheels
-        uses: actions/cache/restore@v4
-        with:
-          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
-          path: wheelhouse/*.whl
-          fail-on-cache-miss: true
-
-      - name: Restore the linux arm wheels cache
-        id: restore_linux_arm_wheels
-        uses: actions/cache/restore@v4
-        with:
-          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
-          path: wheelhouse/*.whl
-          fail-on-cache-miss: true
-
-      - name: Restore the macos wheels cache
-        id: restore_macos_wheels
-        uses: actions/cache/restore@v4
-        with:
-          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
-          path: wheelhouse/*.whl
-          fail-on-cache-miss: true
-
-      - name: Publish distribution to PyPI
-        # don't use a version tag with 3rd party actions
-        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
-        with:
-          packages-dir: wheelhouse
-          verbose: 'true'
+#  publish-to-pypi:
+#    name: Publish to PyPI
+#    needs: [build-wheel-linux, test-wheel-macos]
+#    runs-on: ubuntu-latest
+#
+#    environment:
+#      name: pypi
+#      url: https://pypi.org/p/genomekit
+#
+#    permissions:
+#      id-token: write  # mandatory for trusted publishing
+#
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Restore the linux intel wheels cache
+#        id: restore_linux_intel_wheels
+#        uses: actions/cache/restore@v4
+#        with:
+#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          path: wheelhouse/*.whl
+#          fail-on-cache-miss: true
+#
+#      - name: Restore the linux arm wheels cache
+#        id: restore_linux_arm_wheels
+#        uses: actions/cache/restore@v4
+#        with:
+#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          path: wheelhouse/*.whl
+#          fail-on-cache-miss: true
+#
+#      - name: Restore the macos wheels cache
+#        id: restore_macos_wheels
+#        uses: actions/cache/restore@v4
+#        with:
+#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          path: wheelhouse/*.whl
+#          fail-on-cache-miss: true
+#
+#      - name: Publish distribution to PyPI
+#        # don't use a version tag with 3rd party actions
+#        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
+#        with:
+#          packages-dir: wheelhouse
+#          verbose: 'true'
