--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -12,7 +12,7 @@ on:
     - ".github/workflows/**"
     - "genome_kit/**"
     - "setup.py"
-    - "pyproject.toml"
+    - "_pyproject.toml"
     - "setup/**"
     - "src/**"
     - "tests/**"
@@ -35,10 +35,14 @@ jobs:
         id: restore_linux_wheels
         uses: actions/cache/restore@v4
         with:
-          key: linux-wheels-${{ matrix.arch }}-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          key: linux-wheels-${{ matrix.arch }}-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
           path: wheelhouse/*.whl
 
       # skip remaining steps on cache hit
+
+      - if: ${{ steps.restore_linux_wheels.outputs.cache-hit != 'true' }}
+        name: Rename pyproject.toml
+        run: mv _pyproject.toml pyproject.toml
 
       - if: ${{ steps.restore_linux_wheels.outputs.cache-hit != 'true' }}
         name: Set up Python
@@ -104,10 +108,14 @@ jobs:
         id: restore_macos_wheels
         uses: actions/cache/restore@v4
         with:
-          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
           path: wheelhouse/*.whl
 
       # skip remaining steps on cache hit
+
+      - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
+        name: Rename pyproject.toml
+        run: mv _pyproject.toml pyproject.toml
 
       - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
         name: Set up Python
@@ -126,8 +134,8 @@ jobs:
           GK_BUILD_WHEELS: "1"
           CIBW_ARCHS_MACOS: x86_64 arm64
           CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-*"
-          CIBW_PIP_EXTRA_ARGS: "--no-deps --ignore-installed"
-          CIBW_ENVIRONMENT: "PYTHONPATH=."
+#          CIBW_PIP_EXTRA_ARGS: "--no-deps --ignore-installed"
+#          CIBW_ENVIRONMENT: "PYTHONPATH=."
 
       - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
         name: cache macos wheels
@@ -168,7 +176,7 @@ jobs:
       - name: Download built wheels
         uses: actions/cache/restore@v4
         with:
-          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
           path: wheelhouse/*.whl
           fail-on-cache-miss: true
 
@@ -210,7 +218,7 @@ jobs:
 #        id: restore_linux_intel_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -218,7 +226,7 @@ jobs:
 #        id: restore_linux_arm_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -226,7 +234,7 @@ jobs:
 #        id: restore_macos_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -263,7 +271,7 @@ jobs:
 #        id: restore_linux_intel_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -271,7 +279,7 @@ jobs:
 #        id: restore_linux_arm_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
@@ -279,7 +287,7 @@ jobs:
 #        id: restore_macos_wheels
 #        uses: actions/cache/restore@v4
 #        with:
-#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+#          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', '_pyproject.toml', 'setup.py', 'setup/**') }}
 #          path: wheelhouse/*.whl
 #          fail-on-cache-miss: true
 #
