--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -124,7 +124,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse && ls -l wheelhouse/
         env:
           GK_BUILD_WHEELS: "1"
-          CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_ARCHS_MACOS: arm64
           CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-*"
 
       - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
