--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -124,8 +124,8 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse && ls -l wheelhouse/
         env:
           GK_BUILD_WHEELS: "1"
-          CIBW_ARCHS_MACOS: arm64
-          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-*"
+          CIBW_ARCHS_MACOS: x86_64 arm64
+          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-arm64"
 
       - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
         name: cache macos wheels
@@ -153,7 +153,6 @@ jobs:
           - {"os": "macos-13", "arch": "x86_64", "pyver": "3.10", "pyvershort": "310"}
           - {"os": "macos-13", "arch": "x86_64", "pyver": "3.11", "pyvershort": "311"}
           - {"os": "macos-13", "arch": "x86_64", "pyver": "3.12", "pyvershort": "312"}
-          - {"os": "macos-13", "arch": "x86_64", "pyver": "3.13", "pyvershort": "313"}
 
     steps:
       - name: Set up Python
