--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -125,7 +125,7 @@ jobs:
         env:
           GK_BUILD_WHEELS: "1"
           CIBW_ARCHS_MACOS: x86_64 arm64
-          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-arm64"
+          CIBW_BUILD: "cp39-* cp310-* cp311-* cp312-* cp313-macosx_arm64"
 
       - if: ${{ steps.restore_macos_wheels.outputs.cache-hit != 'true' }}
         name: cache macos wheels
