--- a/.github/workflows/build-wheels.yaml
+++ b/.github/workflows/build-wheels.yaml
@@ -4,7 +4,7 @@ run-name: build-wheels
 on:
   push:
     # only build+push docker on release-please tags
-    branches: [ "test-wheel-ci" ]
+    tags: [ "v*" ]
     paths:
     - ".github/actions/**"
     - ".github/workflows/**"
@@ -238,3 +238,48 @@ jobs:
 #          verbose: 'true'
 #          skip-existing: 'true'
 
+  publish-to-pypi:
+    name: Publish to PyPI
+    needs: [build-wheel-linux, test-wheel-macos]
+    runs-on: ubuntu-latest
+
+    environment:
+      name: pypi
+      url: https://pypi.org/p/genomekit
+
+    permissions:
+      id-token: write  # mandatory for trusted publishing
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Restore the linux intel wheels cache
+        id: restore_linux_intel_wheels
+        uses: actions/cache/restore@v4
+        with:
+          key: linux-wheels-x86_64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          path: wheelhouse/*.whl
+          fail-on-cache-miss: true
+
+      - name: Restore the linux arm wheels cache
+        id: restore_linux_arm_wheels
+        uses: actions/cache/restore@v4
+        with:
+          key: linux-wheels-aarch64-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          path: wheelhouse/*.whl
+          fail-on-cache-miss: true
+
+      - name: Restore the macos wheels cache
+        id: restore_macos_wheels
+        uses: actions/cache/restore@v4
+        with:
+          key: macos-wheels-${{ hashFiles('.github/workflows/build-wheels.yaml', '.github/actions/**', 'src/**', 'genome_kit/**', 'pyproject.toml', 'setup.py', 'setup/**') }}
+          path: wheelhouse/*.whl
+          fail-on-cache-miss: true
+
+      - name: Publish distribution to PyPI
+        # don't use a version tag with 3rd party actions
+        uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
+        with:
+          packages-dir: wheelhouse
+          verbose: 'true'
